fixed email alignment on mobile devices on the contact page

--- a/src/style.css
+++ b/src/style.css
@@ -223,7 +223,7 @@ footer a:hover {
   .linkedin-content a {
     font-size: 20px;
   }
-  .email-content h6 {
+  .email-content a {
     font-size: 20px;
   }
   .contact-content i {
